# Dodge-the-blocks

./: CMakeLists.txt  README.md  config.txt
include/: board_generator.h  game.h
src/: board_generator.cpp  colors.cpp  game.cpp  main.cpp  misc.cpp
